assets/css/style.css
:root {
    /* Colors */
    --font-color: #fff;
    --font-color2: #aaa;
    --link-color: #8cf;
    --link-visited: #dac5ff;
    --hover-color: #ffffcc;
    --highlight-color: #ffffcc;
    --border-color: #446979;
    --top-color: #313536;
    --bottom-color: #1D2021;
    --h1-color: #888;
    --h2-color: #777;
    --h3-color: #666;
    --h4-color: #d7ba7d;
    --code-color: #d7ba7d;
    --cite-color: #777;
    --callout-color: #313536;

    /* Misc */
    --margin: 10px;
    --margin-top: 20px;
    --padding: 10px;
    --radius: 8px;
    --border: 1px solid var(--top-color);

    /* Admonitions */
    --admon-note: var(--link-color);
    --admon-important: var(--border-color);
    --admon-tip: var(--h4-color);
    --admon-caution: var(--highlight-color);
    --admon-warning: var(--highlight-color);
}

* {
    margin: 0px;
    padding: 0px;
}

/* Layout */
body {
    background-color: var(--bottom-color);
    color: var(--font-color);
    font-family: Inter, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
    font-size: 18px;
    line-height: 1.3;
}

nav {
    align-self: center;
}

nav svg:not(:last-child) {
    margin-right: 5px;
}

nav svg:not(:hover) {
    opacity: .8;
}

footer {
    color: var(--font-color2);
    font-size: 70%;
    text-align: center;
    padding: 30px !important;
}

/* Text */
a:link, a:visited {
    text-decoration: none;
    color: var(--link-color);
}

a:hover {
    color: var(--hover-color);
}

h1, h2, h3, h4, h5, h6 {
    margin: 10px 0px;
}

h1 {
    color: var(--h1-color);
    text-decoration: none;
    border-bottom: 1px solid var(--h1-color);
}

h2 {
    color: var(--h2-color);
    text-decoration: none;
    border-bottom: 1px solid var(--h2-color);
}

h3 {
    color: var(--h3-color);
    border-bottom: 1px solid var(--h3-color);
}

h4 {
    color: var(--h4-color);
    border-bottom: 1px solid var(--h4-color);
    margin-bottom: 15px;
}

h3, h4 {
    text-decoration: none;
    padding-top: 10px;
}

h6 {
    color: var(--h4-color);
    text-decoration: underline;
    background-color: black;
    display: none; /*inline; */
    padding: var(--padding);
    border: var(--border);
    border-bottom: 1px solid #000;
    padding-bottom: 1px;
    border-radius: var(--radius) var(--radius) 0px 0px;
}

hr {
    color: var(--link-color);
    border-style: solid;
}

span.bold {
    font-weight: bold;
}

#container, #main {
    width: 100%;
}

#split {
    display: flex;
    justify-content: flex-end;
    gap: 3rem;
    padding-top: var(--padding);
}

#categories, #tags {
    margin-bottom: var(--margin);
}

/* Content */
#content {
    width: 100%;
    flex-basis: auto;
    flex-grow: 1;
    flex-shrink: 1;
    min-width: 0;
    overflow-wrap: anywhere;
    hyphens: auto;
}

#content img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}


#content img.portrait {
    max-height: 300px;
    float: left;
    margin-right: var(--margin);
}

#content .sectionbody .plantuml {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

#content table {
    border-collapse: collapse;
    text-align: left;
}

#content table tr {
    border-bottom: var(--border);
}

#content table tr:last-child {
    border-bottom: none;
}

#content table th {
    font-weight: bold;
    border-bottom: var(--border);
    border-right: var(--border);
    padding: var(--padding);
}

#content table td {
    border-right: var(--border);
    padding: var(--padding);
}

#content table th:last-child, #content table td:last-child {
    border-right: none;
}

#content h1 {
    text-decoration: none;
    border-bottom: 1px solid var(--h1-color);
    margin-bottom: 10px;
    font-size: 1.5em;
}

#content h1:before {
    content: "#";
    padding-right: 0.2em;
}

#content h2 {
    text-decoration: none;
    border-bottom: 1px solid var(--h2-color);
    margin-bottom: 10px;
    font-size: 1.5em;
}

#content h2:before {
    content: "##";
    padding-right: 0.2em;
}

#content h3:before {
    content: "###";
    padding-right: 0.2em;
}

#content h4:before {
    content: "####";
    padding-right: 0.2em;
}

/* Sidebar */
#sidebar {
    flex-grow: 0;
    flex-shrink: 0;
}

#sidebar a {
    display: block;
}

#header {
    background-color: var(--top-color);
    width: 100%;
}

#headline, #split, footer {
    width: 80%;
    margin: 0px auto;
    padding: var(--padding);
}

#headline {
    padding: 30px !important;
}

#headline h1 {
    display: inline-block;
    text-decoration: none;
    border-bottom: 0px;
    margin-bottom: 0px;
    margin-top: 0px;
    font-size: 2em;
}

#headline h2 {
    display: inline-block;
    padding-left: 0px;
    border-bottom: none;
    margin-bottom: 0px;
    font-size: 3.0em;
}

#headline > div {
    display: flex;
    justify-content: space-between;
}

/* TOC */
#table-of-contents {
    float: right;
    margin: var(--margin-top) 0px var(--margin-top) var(--margin-top);
}

#table-of-contents #toc-header {
    color: var(--h4-color);
    text-decoration: underline;
    display: block;
    margin-bottom: var(--margin);
}

#table-of-contents ul {
    list-style: none;
}

#table-of-contents li {
    padding: 0px;
}

#table-of-contents .toc-h2 {
    margin-left: 20px;
}

#table-of-contents .toc-h2:before {
    content: '# ';
}

#table-of-contents .toc-h3 {
    margin-left: 25px;
}

#table-of-contents .toc-h3:before {
    content: '## ';
}

#table-of-contents .toc-h4 {
    margin-left: 30px;
}

#table-of-contents .toc-h4:before {
    content: '### ';
}

#table-of-contents .toc-h5 {
    margin-left: 35px;
}

#table-of-contents .toc-h5:before {
    content: '##### ';
}

/* Tags */
#tag-cloud {
    padding-top: var(--padding);
}

.tags a:before {
    content: "#";
}

.line-through {
    text-decoration-line: line-through;
}

*[rel="tag"]:before {
    content: "#";
}

/* SVG */
svg.rss, svg.github, svg.linkedin {
    width: 1em;
    height: 1em;
    vertical-align: middle;
}
/* ... */

